# flymoon

./: Cargo.toml  Makefile  README.md  README.zh-CN.md  shell.nix  wayland-shell.nix
.github/workflows/: linux.yml  macos.yml  windows.yml
flymoon/: Cargo.toml  build.rs
flymoon/pkg/deb/: README.md  create_deb.sh  install_deb.sh
flymoon/pkg/deb/package/DEBIAN/: control
flymoon/pkg/deb/package/usr/share/applications/: flymoon.desktop
flymoon/script/: init-project.sh
flymoon/src/: lib.rs  version.rs
flymoon/src/config/: conf.rs  data.rs  mod.rs
flymoon/src/db/: def.rs
flymoon/src/logic/: chat_history.rs  chat_session.rs  confirm_dialog.rs  md.rs  mod.rs  setting.rs  tr.rs  util.rs
flymoon/ui/: desktop-window.slint  logic.slint  store.slint  theme.slint
flymoon/ui/base/: select.slint  setting-detail.slint  tab-btns.slint  widgets.slint
flymoon/ui/panel/desktop/: history.slint  home.slint  panel.slint
flymoon/ui/panel/desktop/chat/: input-prompt-list.slint  input.slint  md.slint  panel.slint  session.slint
flymoon/ui/panel/setting/components/: help-detail.slint  preference.slint  prompt.slint
flymoon/windows/: version.h
latex-image/: Cargo.toml
latex-image/src/: main.rs
lib/bot/: Cargo.toml  README.md
lib/bot/src/: openai.rs
lib/cutil/: Cargo.toml
lib/cutil/src/: crypto.rs  time.rs
lib/dummy_markdown/: Cargo.toml  README.md
lib/dummy_markdown/src/: lib.rs  parser.rs
lib/dummy_markdown/tests/: main.rs
lib/mcp/: Cargo.toml
lib/mcp/src/: config.rs  tool.rs
lib/mcp/tests/: main.rs
lib/search/: Cargo.toml  README.md  response.json
lib/search/src/: google.rs  lib.rs
libs/bot/: Cargo.toml  README.md  response.json
libs/bot/src/: openai.rs
libs/bot/tests/: main.rs
libs/cutil/: Cargo.toml
libs/cutil/src/: time.rs
libs/dummy_markdown/: Cargo.toml
libs/dummy_markdown/src/: lib.rs  parser.rs
libs/dummy_markdown/tests/: main.rs
libs/mcp/: Cargo.toml  README.md
libs/mcp/src/: config.rs  lib.rs  tool.rs
libs/mcp/tests/: main.rs
libs/search/: Cargo.toml  README.md
libs/search/src/: google.rs  lib.rs
pkg/deb/: create_deb.sh  uninstall_deb.sh
pkg/deb/package/usr/share/applications/: flymoon.desktop
script/: cp-ui-base-to-slint-template.sh
src/: desktop.rs  lib.rs  version.rs
src/config/: conf.rs  data.rs  mod.rs
src/db/: def.rs  mod.rs
src/logic/: chat_history.rs  chat_session.rs  clipboard.rs  confirm_dialog.rs  mcp.rs  md.rs  mod.rs  popup_action.rs  prompt.rs  setting.rs  tr.rs  util.rs
ui/: desktop-window.slint  logic.slint  store.slint  theme.slint  util.slint
ui/base/: about.slint  check-btn.slint  dialog.slint  elevated-btn.slint  icon-btn.slint  line-input.slint  link.slint  loading.slint  paragraph.slint  popup-action.slint  search.slint  sidebar.slint  status-bar.slint
ui/panel/desktop/: history.slint  home.slint  panel.slint
ui/panel/desktop/chat/: current-prompt-dialog.slint  input-prompt-list.slint  input.slint  md.slint  panel.slint  session.slint  shortcuts-help.slint
ui/panel/setting/: desktop.slint
ui/panel/setting/components/: help-detail.slint  mcp.slint  model.slint  preference.slint  prompt.slint
web/: index.html
windows/: version.h
