[package]
name = "flybot"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
build = "build.rs"
keywords = ["Rust"]
authors = ["Heng30 <rongheng30@gmail.com>"]
homepage = "https://github.com/Heng30/flybot"
repository = "https://github.com/Heng30/flybot"
description = "It's a Rust Slint GUI framework project for quick start."

[dependencies]
log = "0.4"
slint = "1.10"
cfg-if = "1.0"

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos", target_os = "android"))'.dependencies]
toml = "0.8"
anyhow = "1.0"
once_cell = "1.19"
webbrowser = "1.0"
derivative = "2.2"
serde_with = "3.8"
serde_json = "1.0"
uuid = { version = "1.9", features = ["v4"] }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["serde_derive"] }
image = { version = "0.24", optional = true }
qrcode = { version = "0.13", optional = true }
bot = { version = "0.1", path = "./libs/bot", optional = true }
sqldb = { version = "0.1", path = "./libs/sqldb", optional = true }
dummy_markdown = { version = "0.1", path = "./libs/dummy_markdown", optional = true }
cutil = { version = "0.1", path = "./libs/cutil", features = [
  "default",
  "time",
] }

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
clipboard = "0.5"
env_logger = "0.10"
platform-dirs = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
duct = "0.13"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
terminal-clipboard = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2", features = ["js"] }
console_log = { version = "1.0", features = ["color"] }

[build-dependencies]
cmd_lib = "1.9"
slint-build = "1.10"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "2.4"

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true
lto = true

[features]
default = []
web = []
desktop = [
  "database",
  "bot",
  "dummy_markdown",
  "cutil/http",
  "cutil/time",
  "cutil/crypto",
]
android = ["cutil/native-tls-vendored", "slint/backend-android-activity-06"]
full = ["desktop", "qrcode", "database", "bot", "dummy_markdown", "cutil/full"]
qrcode = ["dep:image", "dep:qrcode"]
database = ["dep:sqldb"]
bot = ["dep:bot"]
dummy_markdown = ["dep:dummy_markdown"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
path = "src/desktop.rs"
name = "flybot"
required-features = ["desktop"]

[package.metadata.android]
package = "xyz.heng30.flybot"
build_targets = ["aarch64-linux-android"]
resources = "./android/res"
strip = "strip"

[package.metadata.android.signing.dev]
path = "./android/keystore/debug.keystore"
keystore_password = "123456"

[package.metadata.android.signing.release]
path = "./android/keystore/release.keystore"
keystore_password = "123456"

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 32

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
theme = "@style/AppTheme"

[package.metadata.android.application.activity]
orientation = "portrait"
launch_mode = "singleTop"
always_retain_task_state = true
