[workspace]
exclude = []
resolver = "2"
members = ["flymoon", "lib/*"]

[workspace.package]
license = "MIT"
edition = "2024"
version = "0.1.0"
readme = "README.md"
authors = ["Heng30 <rongheng30@gmail.com>"]
keywords = ["Rust", "GUI", "Slint", "Chatbot"]
homepage = "https://github.com/Heng30/flymoon"
repository = "https://github.com/Heng30/flymoon"
description = "It's a LLM chatbot, compatible with OpenAI's API."

[profile.dev]
debug = "full"
incremental = true

[profile.release]
lto = true
strip = true
debug = false
panic = "abort"
opt-level = "s"
codegen-units = 1
incremental = true

[workspace.dependencies]
log = "0.4"
hex = "0.4"
aes = "0.8"
rmcp = "0.1"
sqlx = "0.8"
rand = "0.9"
toml = "0.8"
duct = "1.0"
uuid = "1.16"
serde = "1.0"
bytes = "1.10"
tokio = "1.44"
slint = "1.12"
image = "0.25"
cfg-if = "1.0"
anyhow = "1.0"
chrono = "0.4"
qrcode = "0.14"
scraper = "0.23"
reqwest = "0.12"
getrandom = "0.3"
clipboard = "0.5"
html2text = "0.15"
html5ever = "0.29"
once_cell = "1.21"
serde_json = "1.0"
webbrowser = "1.0"
derivative = "2.2"
serde_with = "3.12"
env_logger = "0.11"
console_log = "1.0"
async-trait = "0.1"
crypto-hash = "0.3"
urlencoding = "2.1"
tokio-stream = "0.1"
wasm-bindgen = "0.2"
display-info = "0.5"
platform-dirs = "0.3"
embed-resource = "3.0"
android_logger = "0.15"
pulldown-cmark = "0.13"
terminal-clipboard = "0.4"

mcp = { path = "lib/mcp" }
bot = { path = "lib/bot" }
cutil = { path = "lib/cutil" }
sqldb = { path = "lib/sqldb" }
search = { path = "lib/search" }
dummy_markdown = { path = "lib/dummy_markdown" }
