[package]
name = "flymoon"
build = "build.rs"
version.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
slint.workspace = true
cfg-if.workspace = true

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos", target_os = "android"))'.dependencies]
toml.workspace = true
duct.workspace = true
regex.workspace = true
anyhow.workspace = true
once_cell.workspace = true
webbrowser.workspace = true
derivative.workspace = true
serde_with.workspace = true
serde_json.workspace = true
bot = { workspace = true, optional = true }
mcp = { workspace = true, optional = true }
image = { workspace = true, optional = true }
sqldb = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"] }
search = { workspace = true, optional = true }
qrcode = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
display-info = { workspace = true, optional = true }
dummy_markdown = { workspace = true, optional = true }
serde = { workspace = true, features = ["serde_derive"] }
cutil = { workspace = true, features = ["default", "time"] }

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
clipboard.workspace = true
env_logger.workspace = true
platform-dirs.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
android_logger.workspace = true
terminal-clipboard.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
getrandom = { workspace = true, features = ["wasm_js"] }
console_log = { workspace = true, features = ["color"] }

[build-dependencies]
duct.workspace = true

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource.workspace = true

[features]
default = []
web = []
desktop = [
  "database",
  "center-window",
  "cutil/http",
  "cutil/time",
  "cutil/crypto",
  "dep:bot",
  "dep:mcp",
  "dep:search",
  "dep:dummy_markdown",
]
android = ["cutil/native-tls-vendored", "slint/backend-android-activity-06"]
database = ["dep:sqldb"]
qrcode = ["dep:image", "dep:qrcode"]
center-window = ["dep:display-info"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
path = "src/desktop.rs"
name = "flymoon"
required-features = ["desktop"]

[package.metadata.android]
package = "xyz.heng30.flymoon"
build_targets = ["aarch64-linux-android"]
resources = "./android/res"
strip = "strip"

[package.metadata.android.signing.dev]
path = "./android/keystore/debug.keystore"
keystore_password = "123456"

[package.metadata.android.signing.release]
path = "./android/keystore/release.keystore"
keystore_password = "123456"

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 32

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
theme = "@style/AppTheme"

[package.metadata.android.application.activity]
orientation = "portrait"
launch_mode = "singleTop"
always_retain_task_state = true
