[package]
name = "mcp"
version.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
anyhow.workspace = true
once_cell.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["serde_derive"] }
cutil = { workspace = true, features = ["default", "http"] }
rmcp = { workspace = true, features = [
  "client",
  "reqwest",
  "transport-sse-client",
  "transport-child-process",
  "tower",
] }

[dev-dependencies]
env_logger.workspace = true

[features]
test-bin = []

[[bin]]
name = "bot"
path = "./bin/main.rs"
required-features = ["test-bin"]
