[package]
name = "search"
version.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
regex.workspace = true
anyhow.workspace = true
html2md.workspace = true
serde_json.workspace = true
urlencoding.workspace = true
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["serde_derive"] }
cutil = { workspace = true, features = ["default", "http"] }

[dev-dependencies]
env_logger.workspace = true

[[bin]]
name = "google"
path = "./bin/google.rs"
