[package]
name = "search"
version.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
anyhow.workspace = true
scraper.workspace = true
html5ever.workspace = true
html2text.workspace = true
serde_json.workspace = true
urlencoding.workspace = true
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["serde_derive"] }
cutil = { workspace = true, features = ["default", "http"] }

[dev-dependencies]
env_logger.workspace = true

[[bin]]
name = "google"
path = "./bin/google.rs"
