[package]
name = "bot"
version = "0.1.0"
edition = "2021"
descriptions = "A chat bot for OpenAI compatible API. "

[dependencies]
log = "0.4"
anyhow = "1.0"
serde_json = "1.0"
tokio-stream = "0.1"
serde = { version = "1", features = ["serde_derive"] }
cutil = { version = "0.1", path = "../cutil", features = ["default", "http"] }

env_logger = { version = "0.9", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = []
test-bot = ["dep:env_logger", "dep:tokio"]

[[bin]]
name = "bot"
path = "./bin/main.rs"
required-features = ["test-bot"]
