[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["serde_derive"] }

cutil = { version = "0.1", path = "../cutil", features = ["default", "http"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
  "client",
  "transport-sse",
  "transport-child-process",
  "tower",
] }

env_logger = { version = "0.9", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = []
test-bot = ["dep:env_logger", "dep:tokio"]

[[bin]]
name = "mcp"
path = "./bin/main.rs"
required-features = ["test-mcp"]
