[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
once_cell = "1.0"
anyhow = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["serde_derive"] }

cutil = { version = "0.1", path = "../cutil", features = ["default", "http"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
  "client",
  "transport-sse",
  "transport-child-process",
  "tower",
] }

[dev-dependencies]
env_logger = "0.9"
