[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
once_cell = "1.0"
anyhow = "1.0"
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["serde_derive"] }
cutil = { version = "0.1", path = "../cutil", features = ["default", "http"] }
rmcp = { version = "0.1", features = [
  "client",
  "transport-sse",
  "transport-child-process",
  "tower",
] }

[dev-dependencies]
env_logger = "0.9"

[features]
test-bin = []

[[bin]]
name = "bot"
path = "./bin/main.rs"
required-features = ["test-bin"]
